Correct capitalisation of input fields and add padding and right text alignment to labels

--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,7 @@
 
 .label {
   width: 100px;
+  padding: 5px;
+  height: 19px;
+  text-align: right
 }
